--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               >Fee Status</a
             >
           </li> -->
-          <div>
+          <div class="lowban fixed bottom">
             <h6>powered by Tenece</h6>
           </div>
         </ul>
@@ -113,12 +113,9 @@
       <div class="banner">
         <img class="logo" src="assets/img/FPTN.png"/>
           <h1 >
-            
             Student
            Profile
           </h1>
-       
-        </div>
       </div>
    <img class="displaypic" src="assets/img/default Profilepic.jpg" alt="...">
    <div class="titlediv">
