--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               >Fee Status</a
             >
           </li> -->
-          <div class="lowban fixed bottom">
+          <div class="lowban">
             <h6>powered by Tenece</h6>
           </div>
         </ul>
