adding link to Tenece

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             >
           </li> -->
           <div class="lowban">
-            <h6>powered by Tenece</h6>
+            <a href="https://www.tenece.com" target="_blank"><h6>powered by Tenece</h6></a>
           </div>
         </ul>
        
